CTR LFTW : updated sector ownership shape

LFBY : updated coordinates for BG (VFR report point)
LFBZ : updated stands layout apron A, updated taxiways D1 and V, fixed coordinates for VFR report points
LFKF : added stand 12B
LFKJ : renamed stands 1 and 2 to PTT1 and PTT2
LFLB : updated coordinates for SB and SM (VFR report points)
LFLS : full update: stands and taxiways
LFMD : updated coordinates for SW (VFR report point)
LFME : Removed SN, added CS, SG and PA (VFR report points)
LFMK : updated taxiways names, commercial stands layout
LFPB : updated stands K1, K2, Z1, Z2, added appron S, added FBOs, updated taxiways
LFPO : showing full terminal names (ORLY 1 instead of 1)
LFRK : added gates, update taxiway H1, removed taxiway B1
LFTW : Removed SN, added CS, SG, PA, BG, CZ, RD and UH (VFR report points)

**********************
SCT
**********************

LFME : added coordinates and runways for display on APP
LFNR : added coordinates and runways for display on APP

TMA Lyon : updated sector shapes
TMA Nantes : updated sector shapes
TMA Provence : updated sector shapes

CTR LFAQ : updated sector shape
CTR LFMD : updated sector shapes
CTR LFRS : updated sector shape, removed CTR2
CTR LFTW : updated sector shape

LF R35A/R35B PARIS SACLAY VERSAILLES : added for controling LFPN TWR


Note: Groundlayout AVISO display lines such as stand lines, REGIONNAME AVISO displays shapes and hold lines for GND view

LFBZ : updated Groundlayout AVISO with new Apron A layout, updated REGIONNAME AVISO layout
LFCR : added Groundlayout AVISO
LFKF : updated Groundlayout AVISO with stand 12B
LFLG : added Groundlayout AVISO and REGIONNAME AVISO
LFLS : added Groundlayout AVISO and REGIONNAME AVISO
LFMK : updated REGIONNAME AVISO to match color standards of other platforms
LFML : removed non-existing building
LFMU : added Groundlayout AVISO and REGIONNAME AVISO
LFRK : added Groundlayout AVISO and REGIONNAME AVISO
LFTH : added Groundlayout AVISO and REGIONNAME AVISO